title to locations and itineraries

--- a/index.html
+++ b/index.html
@@ -1,5 +1,28 @@
 <!DOCTYPE html>
 <html>
-  <head> </head>
-  <body></body>
+  <head>
+    <title>My Travel Blog</title>
+  </head>
+  <body>
+    <h1>My Travel Blog :)</h1>
+    <h3>"Where Journeys Begin and Stories Unfold."</h3>
+    <p>
+      "Traveling the World: Because 'Zooming' from Your Couch Just Isn't as
+      Memorable!"
+    </p>
+    <ul>
+      <li>The Great Wall of China</li>
+      <li>The Eiffel Tower in Paris, France</li>
+      <li>Machu Picchu in Peru</li>
+      <li>The Serengeti National Park in Tanzania</li>
+      <li>The Grand Canyon in Arizona, USA</li>
+    </ul>
+    <ol>
+      <li>Hike along the ancient walls and soak in breathtaking views.</li>
+      <li>Visit the various watchtowers and learn about their history.</li>
+      <li>Experience a cable car ride for a scenic ascent or descent.</li>
+      <li>Explore the nearby villages and interact with the locals.</li>
+      <li>Immerse yourself in the rich history at the Great Wall Museum.</li>
+    </ol>
+  </body>
 </html>
